--- a/src/components/admin/datatable/datatable.scss
+++ b/src/components/admin/datatable/datatable.scss
@@ -1,8 +1,9 @@
 .datatable {
-  height: 600px;
+  margin-top: 50px;
+  height: 700px;
   padding: 20px;
-  
-  .datatableTitle{
+
+  .datatableTitle {
     width: 100%;
     font-size: 24px;
     color: gray;
@@ -11,7 +12,7 @@
     align-items: center;
     justify-content: space-between;
 
-    .link{
+    .link {
       text-decoration: none;
       color: green;
       font-size: 16px;
@@ -40,39 +41,17 @@
     padding: 5px;
     border-radius: 5px;
 
-    &.active {
+    &.verified {
       background-color: rgba(0, 128, 0, 0.05);
       color: green;
     }
-    &.pending {
-      background-color: rgba(255, 217, 0, 0.05);
-      color: goldenrod;
-    }
-    &.passive {
+    &.unverified {
       background-color: rgba(255, 0, 0, 0.05);
       color: crimson;
     }
   }
+}
 
-  .cellAction {
-    display: flex;
-    align-items: center;
-    gap: 15px;
-
-    .viewButton {
-      padding: 2px 5px;
-      border-radius: 5px;
-      color: darkblue;
-      border: 1px dotted rgba(0, 0, 139, 0.596);
-      cursor: pointer;
-    }
-    
-    .deleteButton {
-      padding: 2px 5px;
-      border-radius: 5px;
-      color: crimson;
-      border: 1px dotted rgba(220, 20, 60, 0.6);
-      cursor: pointer;
-    }
-  }
+.butt {
+  width: 100px;
 }
