--- a/src/components/admin/sidebar/sidebar.scss
+++ b/src/components/admin/sidebar/sidebar.scss
@@ -13,7 +13,7 @@
     .logo {
       font-size: 20px;
       font-weight: bold;
-      color: #6439ff;
+      color: #0e4c95;
     }
   }
 
@@ -33,7 +33,7 @@
       .title {
         font-size: 20px;
         font-weight: bold;
-        color: #999;
+        color: #0e4c95;
         margin-top: 15px;
         margin-bottom: 5px;
       }
@@ -45,18 +45,18 @@
         cursor: pointer;
 
         &:hover {
-          background-color: #ece8ff;
+          background-color: #0e4c95;
         }
 
         .icon {
           font-size: 18px;
-          color: #7451f8;
+          color: #ffc107;
         }
 
         span {
           font-size: 18px;
           font-weight: 600;
-          color: #888;
+          color: #23cde8;
           margin-left: 10px;
         }
       }
@@ -72,7 +72,7 @@
       width: 20px;
       height: 20px;
       border-radius: 5px;
-      border: 1px solid #7451f8;
+      border: 1px solid #0e4c95;
       cursor: pointer;
       margin: 5px;
 
